--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.Desenvolvido por Alura. 
+                Projeto pomodoro desenvolvido por <a href="https://github.com/Nsingrid" target="_blank" rel="noopener noreferrer">Ingrid Nascimento</a>
             </p>
         </footer>
     </main>
